--- a/_data/education-timeline.yml
+++ b/_data/education-timeline.yml
@@ -1,8 +1,8 @@
-- title: B.Tech in Mechanical Engineering - NIT Calicut
+- title: B.Tech in Electrical and Electronics Engineering - NIT Calicut
   from: Jun 2018
   to: May 2022
-  description: Undergraduation in Mechanical Engineering from NIT Calicut. Core learnings include
-                Dynamics, Robotics, Control Systems, Thermal and Fluid Dynamics and other learnings
+  description: Undergraduation in Electrical and Electronics Engineering from NIT Calicut. Core learnings include
+                Electric vehicles, Robotics, Control Systems, Embedded Systems and Analog Circuits and other learnings
                 include Deep learning, Machine learning, Neural networks, etc.,.
 
                
