--- a/_data/work-experience-timeline.yml
+++ b/_data/work-experience-timeline.yml
@@ -1,28 +1,20 @@
-- title: Tiger Analytics 
-  from: July 2023
+- title:  Robotics Software Intern, Void Robotics
+  from: May 2023
   to: Present
   image: 
-  description: ML Engineering & MLOps Development with primary focus on developing ML Platforms and ML Solutions
-              for Business use cases.
+  description: Primarily work on Motion planning, Computer vision and ROS2
 
-- title: Data Scientist, Decimal Point Analytics, Mumbai
-  from: July 2022
-  to: July 2023
+- title: Python developer, Capgemini, Hyderabad
+  from: Sep 2022
+  to: Apr 2023
   image: 
-  description: Part of Reasearch wing, primarily focused on solving business problems using ML and DL. 
+  description: Provide assistance in coding, debugging, and problem-solving. 
+               Contribute to the development and improvement of existing projects.
 
-- title: Software Development Intern, Decimal Point Analytics, Mumbai
-  from: May 2021
-  to: July 2021
-  image: 
-  description: Software engineering with primary focus on Blockchain.
-               Built a POC for blockchain based bidding application
-
-- title: Co-founder AI Club, NITC , Kozhikode
-  from: October 2020
+- title: Robotics Interest Group, NITC, Kozhikode
+  from: July 2019
   to: July 2022
   image: 
-  description: I co-founded the AI club at NITC, dedicated to top-notch AI research and real-world AI system development.
-               I've mentored numerous projects in computer vision, NLP, and medical imaging, organized workshops, and participated in competitions. 
-               My primary focus within the club has been deep learning, computer vision, and medical imaging, resulting in published research papers stemming from my contributions.
-
+  description: I co-founded the AI club at NITC, dedicated to top-notch Robotics and AI research and real-world robotics system development.
+               I've mentored numerous projects in computer vision, Control systems,path planning, Electric Vehicle, Embedded Systems, Gazebo and ML, organized workshops, and participated in competitions. 
+               
