--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -88,7 +88,7 @@ youtube:
   color : ff0000
   
 resume:
-  url   : https://github.com/mano3-1/mano3-1.github.io/raw/main/assets/
+  url   : https://github.com/vamsi1961/vamsi1961.github.io/blob/main/assets/
   icon  : fas fa-download
   color : db4437
   
