--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Cheedella Vamsi Kishore
-  image             : ./assets/manoj.jpg
+  image             : ./assets/kishore.jpg
 # behance           : your_username
 # dribbble          : your_username
   email             : cheedellavamsikishore@gmail.com
