--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
   github            : vamsi1961
 # gitlab            : your_username
   instagram         : kishore__1961
-  kaggle            : saimanojakondi
+  kaggle            : cheedellakishore
   linkedin          : cheedella-vamsi-kishore
   medium            : cheedellavamsikishore
 # soundcloud        : your_username
@@ -44,9 +44,9 @@ author:
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
-#  twitter           : AkondiManoj
+  twitter           : cheedella_vamsi
 # vimeo             : your_username
-#  youtube           : mrai2039
+  youtube           : CheedellaVamsikishore
 # quora             : Uday-Girish-Maradana
   resume            : Kishore_cv.pdf
 # cv                : manoj_cv.pdf
