--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ author:
   twitter           : cheedella_vamsi
 # vimeo             : your_username
   youtube           : CheedellaVamsikishore
-# quora             : Uday-Girish-Maradana
+  quora             : Uday-Girish-Maradana
   resume            : Kishore_cv.pdf
 # cv                : manoj_cv.pdf
 
