--- a/_data/work-experience-timeline.yml
+++ b/_data/work-experience-timeline.yml
@@ -15,6 +15,6 @@
   from: July 2019
   to: July 2022
   image: 
-  description: I co-founded the AI club at NITC, dedicated to top-notch Robotics and AI research and real-world robotics system development.
+  description: I joined RIG in my 2nd year 2019, dedicated to top-notch Robotics and AI research and real-world robotics system development.
                I've mentored numerous projects in computer vision, Control systems,path planning, Electric Vehicle, Embedded Systems, Gazebo and ML, organized workshops, and participated in competitions. 
                
