--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
 # vimeo             : your_username
   youtube           : CheedellaVamsikishore
 #  quora             : Uday-Girish-Maradana
-  resume            : Kishore_cv.pdf
+  resume            : Vamsi_Resume.pdf
 # cv                : manoj_cv.pdf
 
 
